--- a/kanika.html
+++ b/kanika.html
@@ -43,7 +43,7 @@
         <h2>About Me</h2>
         <p>Welcome to my personal website. I am passionate about i dont know yet.</p>
         <p>i have to write something abhi toh</p>
-
+        <p>i have to write something abhi toh</p>
 
     </section>
 
