--- a/kanika.html
+++ b/kanika.html
@@ -42,7 +42,7 @@
     <section>
         <h2>About Me</h2>
         <p>Welcome to my personal website. I am passionate about i dont know yet.</p>
-
+        <p>i have to write something</p>
     </section>
 
     <section>
