--- a/kanika.html
+++ b/kanika.html
@@ -41,8 +41,7 @@
 
     <section>
         <h2>About Me</h2>
-        <p>Welcome to my personal website. I am passionate about i dont know yet.</p>
-        <p>i have to write something</p>
+        <p>Welcome to my personal website. I am passionate about .</p>
     </section>
 
     <section>
