--- a/kanika.html
+++ b/kanika.html
@@ -42,6 +42,7 @@
     <section>
         <h2>About Me</h2>
         <p>Welcome to my personal website. I am passionate about .</p>
+        <p>Welcome to my personal website. I am passionate about .</p>
     </section>
 
     <section>
