--- a/kanika.html
+++ b/kanika.html
@@ -41,8 +41,9 @@
 
     <section>
         <h2>About Me</h2>
-        <p>Welcome to my personal website. I am passionate about .</p>
-        
+        <p>Welcome to my personal website. I am passionate about i dont.</p>
+        <p>Welcome to my personal website. I am passionate about i dont.</p>
+        <p>Welcome to my personal website. I am passionate about i dont.</p>
     </section>
 
     <section>
